--- a/source/.vscode/settings.json
+++ b/source/.vscode/settings.json
@@ -1,5 +1,9 @@
 {
     "files.associations": {
-        "stdio.h": "c"
+        "stdio.h": "c",
+        "string.h": "c",
+        "__locale": "c",
+        "sstream": "c",
+        "string": "c"
     }
 }
